# Embedded-Sensor-CI

./: .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.MD
.github/workflows/: pipeline.yml
src/: main.cpp
